# JimScripts

./: .gitignore  AGENTS.md  Makefile  README.md  generate_DoS_app_keys.sh  generate_fhir_prescription.py  generate_mock_jwks_url.sh  generate_nhs_numbers.py  generate_prescription_id.py  generate_psu_request.py  package-lock.json  package.json  prescribe-parallel.sh  psu_wizard.py  pyproject.toml  send_pfp_request.py  send_psu_request.py  wizard_create_prescription.py  wizard_fhir_create_prescription.py  wizard_make_psu_request.py  wizard_pfp_response_to_psu_request.py
.devcontainer/: devcontainer.json
OLD_VERSION/: generate_nhs_numbers.py  generate_prescription_id.py  generate_psu_request.py  pyproject.toml  wizard_create_prescription.py
apim_cli_helper/: README.md  apim-token.sh  pyproject.toml  requirements.txt  test.sh
apim_cli_helper/apim_cli_helper/: __init__.py  get_token.py
data/prescriptions/: prescription-bundle_nhs-num-9999548792_ods-code-O59100_gentime-20250806111447.json
python/: send_psu_request.py  wizard_make_psu_request.py
python/utils/: create_prescription.py  psu_requests.py  utils.py
typescript/: package-lock.json  package.json
typescript/create-prescription/: package.json
typescript/fhir-prescribing/: README.md  package.json  tsconfig.json
typescript/nhs-number-generator/: README.md  package-lock.json  package.json
typescript/ods-code-generator/: package.json
typescript/pfp-request-sender/: package-lock.json  (+1 more)
utils/: ODS.py  create_prescription.py  data_generators.py  nhs_numbers.py  pfp_requests.py  psu_requests.py  utils.py
(+75 files in other folders)
